# django-custom-mulitple-filter

./: README.md  pyproject.toml
django_custom_multiple_filter/: manage.py  pytest.ini
django_custom_multiple_filter/custom_filters/: filters.py
django_custom_multiple_filter/django_custom_multiple_filter/: asgi.py  settings.py  urls.py  wsgi.py
django_custom_multiple_filter/region/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
django_custom_multiple_filter/region/management/commands/: make_faker.py
django_custom_multiple_filter/region/migrations/: 0001_initial.py
tests/: test_django_custom_multiple_filter.py
